--- a/docs/.env.template
+++ b/docs/.env.template
@@ -1,6 +1,4 @@
-# .env 
-
-# --- General Application Settings ---
+ --- General Application Settings ---
 AGENCY_NAME="CDC"
 OutputDir="output"
 catalogJsonFile="code.json"
@@ -8,7 +6,7 @@ ExemptedCSVFile="exempted_log.csv"
 PrivateIDCSVFile="privateid_mapping.csv"
 LimitNumberOfRepos="0" # Set to 0 or remove for no limit, or a positive integer to limit
 SCANNER_MAX_WORKERS="4" # Number of concurrent workers for repository processing
-REPOS_CREATED_AFTER_DATE="2025-06-21" # Only scan repos created or modified on and after June 21, 2025.
+REPOS_CREATED_AFTER_DATE="2021-04-21" # Optional: Filter repos created on or after this date (YYYY-MM-DD). Leave empty for no filter.
 HOURS_PER_COMMIT="0.5" # Default hours to estimate per commit, if enabled
 
 # --- Default Contact Emails ---
@@ -17,7 +15,7 @@ PRIVATE_REPO_CONTACT_EMAIL="shareit@cdc.gov" # Default contact for private/inter
 
 # --- URLs for Private/Exempt Repositories ---
 INSTRUCTIONS_PDF_URL=https://cdcgov.github.io/ShareIT-Act/assets/files/instructions.pdf 
-EXEMPTED_NOTICE_PDF_URL=https://cdcgov.github.io/ShareIT-Act/assets/files/exempted_notice.pdf
+EXEMPTED_NOTICE_PDF_URL=https://cdcgov.github.io/ShareIT-Act/assets/files/code_exempted.pdf
 
 # --- SSL Verification Control ---
 # WARNING: Disabling SSL verification is insecure and should ONLY be used for trusted internal environments.
@@ -32,6 +30,7 @@ GITLAB_TOKEN="YOUR_GITLAB_PAT" # Personal Access Token for GitLab
 AZURE_DEVOPS_TOKEN="YOUR_AZURE_DEVOPS_PAT" # Personal Access Token for Azure DevOps
 GOOGLE_API_KEY=YOUR_GOOGLE_API_KEY # For AI features (Gemini)
 
+
 # ------------------------------------------------------------------------------------
 #  REPOSITORY PLATFORM TARGETS (Organizations, Groups, Projects)
 # ------------------------------------------------------------------------------------
@@ -43,7 +42,7 @@ GITHUB_ORGS=CDCent,CDCgov,informaticslab,cdcai,epi-info,niosh-mining
 # GITHUB_ENTERPRISE_URL="https://github.yourcompany.com" # Optional: URL for GitHub Enterprise Server if used
 
 GITLAB_URL=https://gitlab.com
-GITLAB_GROUPS=my-biotech-group,philab-group/subgroup
+GITLAB_GROUPS=cdcent
 
 AZURE_DEVOPS_API_URL=https://dev.azure.com
 AZURE_DEVOPS_ORG=MyAzureOrg # Default Azure DevOps organization name
@@ -58,7 +57,7 @@ AI_MODEL_NAME="gemini-1.5-flash-latest" # Or gemini-1.5-flash-latest, etc.
 AI_TEMPERATURE="0.2"
 MAX_TOKENS="15000" # Max tokens for AI *input* truncation (used by exemption_processor)
 AI_MAX_OUTPUT_TOKENS="2048" # Max tokens for AI *output* generation
-AI_DELAY_ENABLED="0.0" # Delay in seconds between AI calls. Only needed when using a trial account.
+AI_DELAY_ENABLED="0.0" # Delay in seconds between AI calls (e.g., 1.0 for 1 second)
 AI_ORGANIZATION_ENABLED="true" # Whether to use AI to infer organization
 
 # --- Per-API Call Throttling (Base Delays) ---
@@ -88,3 +87,15 @@ ADAPTIVE_DELAY_THRESHOLD_REPOS="50"
 ADAPTIVE_DELAY_MAX_SECONDS="2.0" # e.g., 2 seconds
 # Factor of repos that could have been modified after REPOS_CREATED_AFTER_DATE to be used in the delay calculation.
 ADAPTIVE_DELAY_CACHE_MODIFIED_FACTOR=0.20 
+
+# GitHub GraphQL specific delays
+GITHUB_GRAPHQL_CALL_DELAY_SECONDS="0.25"
+GITHUB_GRAPHQL_MAX_DELAY_SECONDS="0.75"
+GITHUB_GQL_MAX_RETRIES="3"
+GITHUB_GQL_INITIAL_RETRY_DELAY=60 # 1 minute
+GITHUB_GQL_RETRY_BACKOFF_FACTOR=2
+GITHUB_GQL_MAX_INDIVIDUAL_RETRY_DELAY=900 # 15 minutes
+
+# GitLab GraphQL specific delays 
+GITLAB_GRAPHQL_CALL_DELAY_SECONDS="0.2"
+GITLAB_GRAPHQL_MAX_DELAY_SECONDS="0.5"
