--- a/processEmails/.env.template
+++ b/processEmails/.env.template
@@ -1,26 +1,20 @@
 # Outlook IMAP Settings
 OUTLOOK_IMAP_SERVER="outlook.office365.com"
 OUTLOOK_IMAP_PORT="993"
-OUTLOOK_EMAIL_ADDRESS="your_service_account_email@yourdomain.com" # The mailbox to access
+
+# Credentials for the account that will perform the login (must have delegate access to the target mailbox if different)
+OUTLOOK_SERVICE_ACCOUNT_EMAIL_ADDRESS="your_authenticating_service_account_email@yourdomain.com"
+OUTLOOK_SERVICE_ACCOUNT_PASSWORD="password_for_authenticating_service_account"
+
+# Target mailbox to scan (e.g., a shared mailbox like shareit@cdc.gov). Leave blank to scan the service account's own mailbox.
+TARGET_MAILBOX_EMAIL_TO_SCAN="email_address_of_mailbox_to_scan@yourdomain.com"
 
 # Outlook SMTP Settings (for forwarding)
 OUTLOOK_SMTP_SERVER="smtp.office365.com"
 OUTLOOK_SMTP_PORT="587"
-# SMTP username is often the same as OUTLOOK_EMAIL_ADDRESS
-
-# Azure AD App Registration Details (for OAuth 2.0)
-AZURE_CLIENT_ID="your_app_client_id"
-AZURE_TENANT_ID="your_directory_tenant_id"
-AZURE_CLIENT_SECRET="your_app_client_secret"
-
-# OAuth Scopes
-# For IMAP: Typically 'https://outlook.office365.com/.default' or 'https://graph.microsoft.com/.default' if using Graph
-# For direct IMAP/SMTP with OAuth, the scope might be more specific or just '.default' if permissions are set correctly.
-# Let's use .default which implies all configured permissions for the app.
-OAUTH_SCOPE="https://outlook.office365.com/.default" # Or "https://graph.microsoft.com/.default" if app permissions are Graph-based
 
 # CSV File Path
-PRIVATEID_MAPPINGS_CSV_PATH="output/privateid_mappings.csv"
+PRIVATEID_MAPPINGS_CSV_PATH="output/privateid_mapping.csv"
 
 # Mailbox Folders
 IMAP_MAILBOX_TO_CHECK="INBOX"
