--- a/processEmails/.env.template
+++ b/processEmails/.env.template
@@ -1,29 +1,32 @@
-# Outlook IMAP Settings
-OUTLOOK_IMAP_SERVER="outlook.office365.com"
-OUTLOOK_IMAP_PORT="993"
+# --- Microsoft Graph API Authentication Settings (OAuth2 Client Credentials Flow) ---
+# These details will be provided by your IT support after they create an App Registration in Azure AD.
+GRAPH_CLIENT_ID="YOUR_AZURE_APP_CLIENT_ID"
+GRAPH_CLIENT_SECRET="YOUR_AZURE_APP_CLIENT_SECRET_VALUE"
+GRAPH_TENANT_ID="YOUR_AZURE_TENANT_ID"
 
-# Credentials for the account that will perform the login (must have delegate access to the target mailbox if different)
-OUTLOOK_SERVICE_ACCOUNT_EMAIL_ADDRESS="your_authenticating_service_account_email@yourdomain.com"
-OUTLOOK_SERVICE_ACCOUNT_PASSWORD="password_for_authenticating_service_account"
+# --- Mailbox Configuration ---
+# REQUIRED: The email address of the mailbox to scan (e.g., a shared mailbox like shareit@cdc.gov).
+# The application will abort if this is not set.
+TARGET_MAILBOX_EMAIL_TO_SCAN="shareit@cdc.gov"
 
-# Target mailbox to scan (e.g., a shared mailbox like shareit@cdc.gov). Leave blank to scan the service account's own mailbox.
-TARGET_MAILBOX_EMAIL_TO_SCAN="email_address_of_mailbox_to_scan@yourdomain.com"
+# --- File and Folder Settings ---
+# Path to the CSV file containing PrivateID to contact email mappings.
+PRIVATEID_MAPPINGS_CSV_PATH="output/privateid_mappings.csv"
 
-# Outlook SMTP Settings (for forwarding)
-OUTLOOK_SMTP_SERVER="smtp.office365.com"
-OUTLOOK_SMTP_PORT="587"
+# Mailbox folder to check for new emails within the TARGET_MAILBOX_EMAIL_TO_SCAN.
+MAILBOX_FOLDER_TO_CHECK="Inbox"
 
-# CSV File Path
-PRIVATEID_MAPPINGS_CSV_PATH="output/privateid_mapping.csv"
+# Optional: Folder name where successfully processed and forwarded emails will be moved.
+# If blank or commented out, emails will not be moved after successful processing (beyond being marked as read).
+PROCESSED_FOLDER_NAME="ProcessedRequests"
 
-# Mailbox Folders
-IMAP_MAILBOX_TO_CHECK="INBOX"
-IMAP_PROCESSED_FOLDER="ProcessedRequests"
-IMAP_MANUAL_REVIEW_FOLDER="NeedsManualReview"
+# Optional: Folder name where emails requiring manual review will be moved.
+# (e.g., if PrivateID not found, or forwarding fails).
+# If blank or commented out, emails will not be moved to a manual review folder.
+MANUAL_REVIEW_FOLDER_NAME="NeedsManualReview"
 
-# Optional: Specific the subject line to target.  Use [privateid] as a placeholder for the ID.
+# Optional: Specify the subject line pattern to target. Use [privateid] as a placeholder for the ID.
 # If set, only emails matching this subject pattern will be processed for ID extraction.
 # Example: TARGET_SUBJECT="Request for source code repository: [privateid]"
+# If left blank or commented out, the script will search for any known PrivateID (from the CSV) in the subject line.
 TARGET_SUBJECT="Request for source code repository: [privateid]"
-# if you leave TARGET_SUBJECT= blank or comment it out, the script will use the old method of searching for 
-# any known privateid in the subject line.
