--- a/processEmails/.env.template
+++ b/processEmails/.env.template
@@ -11,7 +11,7 @@ TARGET_MAILBOX_EMAIL_TO_SCAN="shareit@cdc.gov"
 
 # --- File and Folder Settings ---
 # Path to the CSV file containing PrivateID to contact email mappings.
-PRIVATEID_MAPPINGS_CSV_PATH="output/privateid_mappings.csv"
+PRIVATEID_MAPPINGS_CSV_PATH="mappings/privateid_mapping.csv"
 
 # Mailbox folder to check for new emails within the TARGET_MAILBOX_EMAIL_TO_SCAN.
 MAILBOX_FOLDER_TO_CHECK="Inbox"
@@ -30,3 +30,21 @@ MANUAL_REVIEW_FOLDER_NAME="NeedsManualReview"
 # Example: TARGET_SUBJECT="Request for source code repository: [privateid]"
 # If left blank or commented out, the script will search for any known PrivateID (from the CSV) in the subject line.
 TARGET_SUBJECT="Request for source code repository: [privateid]"
+
+#  Adding a New Client Secret: The script would make an API call to your application registration in Azure AD to 
+#add a new client secret. This call returns the new secret value.
+# --- Automatic Client Secret Renewal Settings ---
+# Enable/disable automatic secret renewal feature
+AUTO_RENEW_SECRET_ENABLED="true" 
+
+# IMPORTANT: This is the Object ID of the *Application Registration* in Azure AD.
+# Find this in Azure AD > App registrations > Your App > Overview > Object ID.
+# This is NOT the "Application (client) ID" and might be different from the Service Principal's Object ID.
+APP_REG_OBJECT_ID="1b6f9c1f-90b9-4d1c-8ca3-f1341c4f42fe"
+
+# Current secret's expiry date. Format: YYYY-MM-DD
+# You get this when you create a client secret in Azure portal.
+CURRENT_SECRET_EXPIRY_DATE="2026-06-12"
+
+# How many days before expiry to attempt proactive renewal
+SECRET_RENEWAL_THRESHOLD_DAYS="30" 
